# uniscan

./: .bumpversion.toml  .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  pyrefly.toml  pytest.ini  ruff.toml  tox.ini  uv.toml
.github/workflows/: ci.yml  release.yml
.trae/: .ignore
.trae/docs/: iter-01-完善lint类型测试文档.md  iter-02-multi-format-extractors.md  iter-04-gui.md  iter-05-tray-watcher.md  iter-06-polish-and-finalize.md  iter-09-perf-and-detail.md  iter-10-path-filter-and-builtin-rules.md  iter-11-multi-rules.md  iter-12-config-persistence.md  iter-13-antivirus-ui.md  iter-14-realtime-progress.md  iter-15-模板清理.md  iter-16-扫描控制.md  iter-17-筛选排序.md  iter-18-详情导航.md  iter-19-规则编辑.md  iter-20-界面风格规范.md  iter-21-规则精简与抽取.md  iter-22-GUI主窗口重构.md  iter-23-ui文件构建.md  iter-24-ui-art-design.md  iter-25-详情定位修复.md  iter-27-测试扩展与性能优化.md  iter-28-gui重构rule12.md  iter-29-界面布局优化与行尾规范化.md  iter-30-UI同步与卡滞优化.md  iter-31-性能优化.md  iter-34-提取器回退函数提取.md  iter-35-新增文件格式支持.md  iter-36-典型文件示例与性能基线.md  iter-38-缓存性能优化与版本兼容.md  iter-39-性能优化策略执行.md  iter-41-数据层增强.md  iter-42-导出功能.md  iter-43-扫描中UI增强.md  iter-44-性能优化与Splitter美化.md  iter-45-rule12合规整改.md  iter-46-cicd-lint修复.md  iter-47-代码质量审查修复.md  iter-48-功能内聚重构P1P3.md  (+33 more)
.trae/documents/: gui-refactor-rule-12-completion.md  gui-refactor-rule-12-continuation.md  gui-refactor-rule-12.md  gui-simplification-completion.md  gui-simplification.md  gui全面拆分精简计划.md  scan-button-refinement.md  severity-color-differentiation.md  精简 main_window.py UI 设计.md
.trae/req/: req-01-完善lint类型测试文档.md  req-03-界面风格规范.md  req-05-详情定位修复与测试丰富.md  req-07-测试扩展与性能优化.md  req-08-gui重构rule12.md  req-09-功能更新.md  req-10-rule12合规整改.md  req-14-问题修复.md  req-15-性能统计增强.md  req-16-缓存读并行化.md  req-18-解析器勾选区.md  req-22-UI改进.md  req-25-文本分类细化.md  需求01.md  需求02.md
.trae/req/done/: req-02-增强功能.md  req-04-ui文件构建.md  req-06-哈希缓存.md  req-09-功能更新.md  req-11-iter60需求.md  req-12-iter61需求.md  req-13-功能优化.md  req-19-功能更新.md  req-20-扫描体验优化.md  req-21-现代QSS与按钮差异化.md  req-23-规则字段清理与结果树去重.md  req-24-白名单制文件过滤.md  req-26-压缩包内部条目展示.md  req-27-文件类型速度档次.md  req-28-速度档次着色与PDF加速.md  req-29-表格解析calamine加速.md  req-30-命中内容替换.md  req-31-scan_target面板抽离.md
.trae/rules/: dev-workflow.md  git-commit-message.md  python-standards.md  rule-01-开发流程.md  rule-02-产物约束.md  rule-02-自驱开发原则.md  rule-09-git提交规则.md  rule-11-python-standards.md  rule-12-gui-pyside-standards.md  rule-12-pyqt-standards.md  rule-12-pyside-dev.md  self-driven.md
.trae/skills/: fuscan-development.md  fuscan-gui-layout.md  pyfilescan-development.md  uniscan-gui-layout.md
.trae/skills/fuscan-development/: SKILL.md
.trae/skills/fuscan-gui-layout/: SKILL.md
.trae/skills/python-testing/: SKILL.md
benchmarks/: __init__.py  baseline.md  bench_scan.py  gui-baseline.md  sample_files.py
docs/: api.rst  changelog.rst  conf.py  index.rst  manual.md
examples/: README.md  archive_scan.py  basic_scan.py  custom_extractor.py  file_monitor.py  incremental_scan.py
rules/: example.yaml
rules/examples/: README.md  code-security.yaml  compliance.yaml  data-classification.yaml  dependency-audit.yaml  devops-ci.yaml  infrastructure-as-code.yaml  ip-protection.yaml  log-analysis.yaml  privacy-gdpr.yaml  security-audit.yaml  sensitive-data.yaml  web-security.yaml
src/fuscan/: __init__.py  __main__.py  cli.py  config.py  perf.py  replacer.py  resources.qrc  resources_rc.py  theme.py
src/fuscan/archive/: __init__.py  base.py  rar_reader.py  scanner.py  sevenz_reader.py  zip_reader.py
src/fuscan/assets/: resources.qrc
src/fuscan/builtin/: __init__.py  rules.yaml
src/fuscan/cache/: __init__.py  hashes.py  schema.py  sources.py  store.py
src/fuscan/extractors/: __init__.py  base.py  email.py  legacy_office.py  odf.py  office.py  pdf.py  registry.py  rtf.py  spreadsheet.py  text.py  wps.py
src/fuscan/gui/: __init__.py  __main__.py  about.py  about_dialog.py  about_dialog.ui  about_dialog_ui.py  about_ui.py  app.py  content_panel.py  detail_dialog.py  detail_dialog.ui  detail_dialog_ui.py  detail_panel.py  export_worker.py  extractor_model.py  main_window.py  main_window.ui  main_window_ui.py  perf.py  preview_utils.py  regex_tester.py  regex_tester.ui  regex_tester_ui.py  resources_rc.py  result_filter_panel.py  result_tree.py  rule_editor.py  rule_editor.ui  rule_editor_ui.py  rule_panel.ui  rule_panel_ui.py  scan_mode_panel.py  scan_target.py  scan_target.ui  scan_target_ui.py  settings_dialog.py  settings_dialog.ui  settings_dialog_ui.py  stage_controller.py  styles.qss  (+1 more)
src/fuscan/rules/: __init__.py  errors.py  merge.py  model.py  parser.py
src/fuscan/scanner/: __init__.py  context.py  export.py  matchers.py  result.py  scanner.py  walker.py
src/fuscan/watcher/: __init__.py  ignore_dirs.py  incremental.py  monitor.py  tray.py
src/fuscan/workers/: __init__.py  scan_worker.py  stats_worker.py
src/pyfilescan/: cli.py  config.py
src/pyfilescan/builtin/: __init__.py  rules.yaml
src/pyfilescan/extractors/: __init__.py  base.py  odf.py  office.py  pdf.py  registry.py  spreadsheet.py  text.py  wps.py
src/pyfilescan/gui/: __init__.py  app.py  detail_dialog.py  main_window.py  worker.py
src/pyfilescan/rules/: __init__.py  merge.py  model.py  parser.py
src/pyfilescan/scanner/: __init__.py  result.py  scanner.py  walker.py
src/pyfilescan/watcher/: __init__.py  ignore_dirs.py  incremental.py  monitor.py  tray.py
src/uniscan/: __init__.py  config.py
src/uniscan/gui/: app.py  main_window.py  main_window.ui  (+4 more)
tests/: conftest.py  test_archive.py  test_benchmark.py  test_builtin.py  test_cache.py  test_cli.py  test_config.py  test_context.py  test_export.py  test_extractor_benchmark.py  test_extractor_model.py  test_extractors.py  test_fuscan.py  test_gui.py  test_gui_perf.py  test_gui_scan_path_history.py  test_matchers.py  test_merge.py  test_multi_format_scan.py  test_multiformat_scan.py  test_replacer.py  test_rules_model.py  test_rules_parser.py  test_sample_files.py  test_scanner.py  test_tray.py  test_uniscan.py  test_walker.py  test_watcher.py
(+2 files in other folders)
