[project]
authors = [{ name = "gooker_young", email = "gooker_young@qq.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "PySide2>=5.15.2.1; python_version <= '3.10'",
    "PySide6>=6.5.0; python_version >= '3.11'",
    "PyYAML>=6.0",
    "watchdog>=3.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.1",
    "pypdf>=4.0.0",
    "rarfile>=4.1",
    "charset-normalizer>=3.3.0",
]

description     = "极速通用文件扫描器."
license         = "MIT"
name            = "uniscan"
readme          = "README.md"
requires-python = ">=3.8"
version         = "0.1.1"

[project.optional-dependencies]
dev = [
    "uniscan[lint,test]",
    "prek>=0.4.5",
    "tox-uv>=1.13.1",
    "tox>=4.25.0",
]
docs = ["myst-parser>=3.0", "sphinx-rtd-theme>=2.0", "sphinx>=7.0"]
lint = ["pyrefly>=1.1.1", "ruff>=0.8.0"]
test = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.0.0",
]

[project.scripts]
uniscan = "uniscan.cli:main"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.uv]
required-version = ">=0.5.0"

[[tool.uv.index]]
default = true
url     = "https://mirrors.aliyun.com/pypi/simple/"

[tool.hatch.build.targets.wheel]
packages = ["src/uniscan"]

[tool.hatch.build.targets.wheel.force-include]
"src/uniscan/py.typed" = "uniscan/py.typed"

[dependency-groups]
dev = ["uniscan[dev,docs]"]

[tool.coverage.run]
branch      = true
concurrency = ["thread"]
omit        = ["tests/*"]
source      = ["uniscan"]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]
show_missing = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers                            = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths                          = ["tests"]

# Ruff 配置 - 与 .pre-commit-config.yaml 保持一致
[tool.ruff]
line-length    = 120
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLC0415", # import should be at top-level (intentional for lazy imports)
    "PLR0915", # too many statements (intentional for complex methods)
    "PLR2004", # magic value comparison
    "RUF001",  # ambiguous unicode characters in string
    "RUF002",  # ambiguous unicode characters in docstring
    "RUF003",  # ambiguous unicode characters in comment
    "RUF012",  # mutable class attributes (intentional for config)
    "SIM108",  # use ternary operator
]
select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "PL",  # Pylint
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ARG001", "ARG002"]

[tool.pyrefly]
preset           = "strict"
project-excludes = [".venv/**"]
project-includes = ["**/*.ipynb", "**/*.py*"]
python-version   = "3.8"
search-path      = ["."]

[tool.bumpversion]
current_version = "0.1.1"
commit = true
message = "chore: 更新版本 {current_version} → {new_version}"
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '(version\s+=\s+)"{current_version}"'
replace = '\1"{new_version}"'

[[tool.bumpversion.files]]
filename = "src/uniscan/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'