[project]
authors = [{ name = "gooker_young", email = "gooker_young@qq.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "PySide2>=5.15.2.1; python_version <= '3.10'",
    "PySide6>=6.5.0; python_version >= '3.11'",
    "PyYAML>=6.0",
    "typing-extensions>=4.0; python_version < '3.13'",
    "watchdog>=3.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.1",
    "pypdf>=4.0.0",
    "rarfile>=4.1",
    "charset-normalizer>=3.3.0",
    "striprtf>=0.0.26",
    "xlrd>=2.0.1",
    "olefile>=0.46",
    "extract-msg>=0.48.0,<0.56",
    "py7zr>=0.20.0",
    "reportlab>=3.6.13,<4.0; python_version < '3.9'",
    "reportlab>=4.0.0; python_version >= '3.9'",
]

description     = "极速通用文件扫描器."
license         = "MIT"
name            = "fuscan"
readme          = "README.md"
requires-python = ">=3.8"
version         = "0.1.8"

[project.optional-dependencies]
dev = [
    "fuscan[lint,test]",
    "prek>=0.4.5",
    "tox-uv>=1.13.1",
    "tox>=4.25.0",
]
docs = ["myst-parser>=3.0", "sphinx-rtd-theme>=2.0", "sphinx>=7.0"]
lint = ["pyrefly>=1.1.1", "ruff>=0.8.0"]
test = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.0.0",
]

[project.scripts]
fuscanc = "fuscan.cli:main"
fuscan = "fuscan.gui.app:launch"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/fuscan"]

[tool.hatch.build.targets.wheel.force-include]
"src/fuscan/py.typed" = "fuscan/py.typed"
"src/fuscan/assets/docs/fuscan-用户手册.pdf" = "fuscan/assets/docs/fuscan-用户手册.pdf"
"src/fuscan/gui/styles.qss" = "fuscan/gui/styles.qss"

[tool.fspack.entries]
fuscan = "src/fuscan/gui/__main__.py"

[dependency-groups]
dev = ["fuscan[dev,docs]"]
